# AndroidCamera

./: .gitignore  README.md  README_en.md  build.gradle  gradle.properties  gradlew
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: base_fragment.sh  base_vertex.sh  oes_base_fragment.sh  oes_base_vertex.sh
app/src/main/cpp/: com_aserbao_androidcustomcamera_utils_VoiceUtils.h  sound.cpp
app/src/main/cpp/inc/: fmod.h  fmod.hpp  fmod_codec.h  fmod_common.h  fmod_dsp.h  fmod_dsp_effects.h  fmod_errors.h  fmod_output.h
app/src/main/res/anim/: expression_hidden_anim.xml  expression_show_anim.xml  focusview_show.xml  top_enter.xml  top_exit.xml
app/src/main/res/drawable/: change_hue.xml  color_white60_radius_5_bg.xml  ic_launcher_background.xml  tv_red_bg.xml
app/src/main/res/drawable-hdpi/: color_fc4253_radius_5_bg.xml  jz_loading.xml  tv_circle_white10_bg.xml  tv_circle_white40_bg.xml  yellow_5r_btn_bg.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/drawable-xhdpi/: video_player_tv_bg_gray.xml
app/src/main/res/drawable-xxhdpi/: btn_black50_r15_bg.xml  btn_edit_next_bg.xml  color_010101_radius_15_bg.xml  color_050505_radiu_10_bg.xml  color_333333_radius_14_bg.xml  color_aa000000_radius_50_bg.xml  color_efefef_radius_100_bg.xml  color_fc4253_radius_7_bg.xml  filter_item_bg.xml  item_message_check_bg.xml  jz_bottom_progress.xml  jz_bottom_seek_progress.xml  jz_click_pause_selector.xml  jz_click_play_selector.xml  loading_video_progress.xml  vw_selector_cbx.xml
app/src/main/res/layout/: activity_audio_record.xml  activity_audio_style.xml  activity_base.xml  activity_blocks.xml  activity_change_hue.xml  activity_change_voice.xml  activity_create_video_by_audio_db.xml  activity_encode_and_mux.xml  activity_local_video.xml  activity_main.xml  activity_media_codec.xml  activity_media_codec_show_on_gl_surface_view.xml  activity_media_extractor.xml  activity_media_muxer.xml  activity_mp3_translate_aac.xml  activity_primary_media_codec.xml  (+45 more)
(+261 files in other folders)
